Добавлена реализация вихря Мерсенна

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(SOURCES
         src/congurent_generator.cpp
         src/fibonacci_generator.cpp
+        src/mersenne_twister.cpp
         src/main.cpp
     )
 set(HEADERS
         include/constexpr_pow.hpp
         include/fibonacci_generator.hpp
         include/congurent_generator.hpp
+        include/mersenne_twister.hpp
     )
 
 include_directories(include)
