Изменил Cmake, убрал srand за ненадобностью

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,21 +5,31 @@ project(randomNumGen LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(SOURCES
+set(SOURCES_GEN
         src/congurent_generator.cpp
         src/fibonacci_generator.cpp
         src/mersenne_twister.cpp
-        src/metrics.cpp
-        src/main.cpp
     )
-set(HEADERS
-        include/constexpr_pow.hpp
+
+set(HEADERS_GEN
         include/fibonacci_generator.hpp
         include/congurent_generator.hpp
-        include/metrics.hpp
         include/mersenne_twister.hpp
     )
 
+add_library(randomgenlib ${HEADERS_GEN} ${SOURCES_GEN})
+
+set(HEADERS_MET
+        include/metrics.hpp
+    )
+set(SOURCES_MET
+        src/metrics.cpp
+    )
+add_library(metricslib ${HEADERS_MET} ${SOURCES_MET})
+
 include_directories(include)
 
-add_executable(randomNumGen ${HEADERS} ${SOURCES})
+add_executable(main src/main.cpp)
+target_link_libraries(main randomgenlib
+                           metricslib
+                           )
